# django-meditor

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  todo.md
meditor/: __init__.py  apps.py  extensions.py  models.py  urls.py  views.py  widgets.py
meditor/migrations/: 0001_initial.py
meditor/static/meditor/css/: rich-markdown-editor.css
meditor/static/meditor/js/: rich-markdown-editor.js
meditor/templates/meditor/extensions/: alert.html  code_block.html  gallery.html  quote.html
meditor/templatetags/: __init__.py  markdown_filters.py
