[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-meditor"
version = "0.3.1"
description = "A Django app providing a rich markdown editor with HTML conversion and snippet management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TRDWLL"}
]
maintainers = [
    {name = "TRDWLL"}
]
keywords = ["django", "markdown", "editor", "html", "conversion", "snippets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.11"
dependencies = [
    "Django>=5.1,<6.0",
    "Pillow>=10.0.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/trdwll/django-meditor"
Documentation = "https://github.com/trdwll/django-meditor#readme"
Repository = "https://github.com/trdwll/django-meditor"
"Bug Tracker" = "https://github.com/trdwll/django-meditor/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[tool.setuptools.packages.find]
include = ["meditor*"]

[tool.setuptools.package-data]
meditor = [
    "static/**/*",
    "templates/**/*",
    "templatetags/**/*",
] 